--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,10 +20,10 @@ spring:
   cloud:
     gateway:
       routes:
-      - id: rest-api-example1-service
+      - id: rest-api-example1/v1.0-service
         uri: http://localhost:8080
         predicates:
-        - Path=/rest-api-example1/**, /rest-api-example1/v3/api-docs/**
+        - Path=/rest-api-example1/v1.0**, /rest-api-example1/v3/api-docs/v1.0
         
       - id: rest-api-example2/v1.0-service
         uri: http://localhost:8081
@@ -59,4 +59,4 @@ spring:
         predicates:
         - Path=/v3/api-docs/**
         filters:
-        - RewritePath=/v3/api-docs/(?<path>.*), /$\{path}/v3/api-docs        
+        - RewritePath=/v3/api-docs/(.*), /$1/v3/api-docs        
