--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.3.RELEASE</version>
-		<!-- version>2.0.6.RELEASE</version-->
+		<!-- version>2.0.6.RELEASE</version -->
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.msl</groupId>
@@ -19,7 +19,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
-		<!-- spring-cloud.version>Finchley.SR2</spring-cloud.version-->
+		<!-- spring-cloud.version>Finchley.SR2</spring-cloud.version -->
 		<springdoc.apenapi.version>1.2.33</springdoc.apenapi.version>
 	</properties>
 
@@ -45,6 +45,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
