--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,27 +3,17 @@
 server:
   port: 8888
 
-# The /gateway actuator endpoint lets you monitor and interact with a Spring Cloud Gateway application. 
-# To be remotely accessible, the endpoint has to be enabled and exposed over HTTP or JMX     
-management:
-  endpoint:
-    gateway:
-      enabled: true
-  endpoints:
-    web:
-      exposure:
-        include: gateway
-            
+
 spring:
   application:
     name: gateway-service
   cloud:
     gateway:
       routes:
-      - id: rest-api-example1/v1.0-service
+      - id: rest-api-example1-service
         uri: http://localhost:8080
         predicates:
-        - Path=/rest-api-example1/v1.0**, /rest-api-example1/v3/api-docs/v1.0
+        - Path=/rest-api-example1/**
         
       - id: rest-api-example2/v1.0-service
         uri: http://localhost:8081
@@ -46,14 +36,15 @@ spring:
         - Path=/rest-api-example-m2m/v2.0/**, /rest-api-example-m2m/v3/api-docs/v2.0 
         
                            
-      # route to catch swagger definitions requests and rewrite it to the corresponding url service            
+      # route to catch swagger definitions requests and rewrite it to the corresponding url versioned service            
       - id: openapi-versioned
         uri: http://localhost:${server.port}
         predicates:
         - Path=/v3/api-docs/*/v*
         filters:
-        - RewritePath=/v3/api-docs/(.*)(/)(.*), /$1/v3/api-docs/$3
+        - RewritePath=/v3/api-docs/(.*)/(.*), /$1/v3/api-docs/$2
       
+      # route to catch swagger definitions requests and rewrite it to the corresponding url unversioned service
       - id: openapi
         uri: http://localhost:${server.port}
         predicates:
