--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@
 # http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 server:
   port: 8888
+  servlet:    session:      timeout: 300
 
 
 spring:
